<resources>
	<string name="app_name">Smart Watch App</string>
	<string name="login_message">Please fill this form to login.</string>
	<string name="login">Login</string>
	<string name="welcome">Welcome!</string>
	<string name="mac_address">MAC Address</string>
	<string name="watch_name">Watch Name</string>
	<string name="insights">Insights</string>
	<string name="blood_oxygen">-- %</string>
	<string name="heart_rate">-- BPM</string>
	<string name="str_heart_rate">Heart Rate</string>
	<string name="str_blood_oxygen">Blood Oxygen</string>
	<string name="blood_pressure">---/--</string>
	<string name="str_blood_pressure">Blood Pressure</string>
	<string name="state_connecting">Connecting</string>
	<string name="state_connected">Connected</string>
	<string name="state_disconnected">Disconnected</string>
	<string name="connected">Connected</string>
	<string name="title_activity_maps">MapsActivity</string>
	<string name="title_activity_maps2">MapsActivity2</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_fragments_main">FragmentsMainActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Journey</string>
	<string name="title_notifications">Profile</string>
	<string name="live_insights">Live Insights</string>
	<string name="speed">Speed</string>
    <string name="accuracy">Accuracy</string>
	<string name="altitude">Altitude</string>
    <string name="_00_00_00">00:00:00</string>
	<string name="timer">00:00:00:000</string>
	<string name="dashes">--</string>
</resources>