<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Activities.HomeScreen">
	
	<RelativeLayout
		android:id="@+id/rl_top_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_semi_rounded_bottom_corners"
		android:backgroundTint="@color/blue"
		android:padding="20dp">
		
		<ImageView
			android:layout_centerVertical="true"
			android:id="@+id/iv_logout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:src="@drawable/ic_logout" />
		
		<TextView
			android:id="@+id/tv_welcome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:layout_centerVertical="true"
			android:fontFamily="@font/poppins_medium"
			android:text="@string/welcome"
			android:textColor="@color/white"
			android:textSize="30sp"
			android:textStyle="bold" />
	</RelativeLayout>
	<ScrollView
		android:layout_below="@id/rl_top_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<RelativeLayout
				android:id="@+id/rl_watch_connection"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="10dp">
				
				<androidx.recyclerview.widget.RecyclerView
					android:elevation="5dp"
					android:id="@+id/rv_watch_connection"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:visibility="gone" />
				
				<androidx.cardview.widget.CardView
					android:id="@+id/cv_watch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:elevation="5dp"
					app:cardBackgroundColor="#eeeeee"
					app:cardCornerRadius="16dp"
					app:cardUseCompatPadding="true">
					
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="16dp">
						
						<ImageView
							android:id="@+id/iv_watch"
							android:layout_width="60dp"
							android:layout_height="85dp"
							android:layout_marginStart="5dp"
							android:src="@drawable/ic_smart_watch" />
						
						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerVertical="true"
							android:layout_marginStart="20dp"
							android:layout_toEndOf="@id/iv_watch"
							android:orientation="vertical">
							
							<TextView
								android:id="@+id/tv_watch_name"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:fontFamily="@font/poppins_medium"
								android:text="@string/watch_name"
								android:textColor="@color/black"
								android:textSize="22sp"
								android:textStyle="bold" />
							
							<TextView
								android:id="@+id/tv_watch_mac_address"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_below="@id/tv_watch_name"
								android:fontFamily="@font/poppins_medium"
								android:text="@string/mac_address"
								android:textColor="@color/black"
								android:textSize="16sp" />
						</RelativeLayout>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentEnd="true"
							android:textColor="@color/green"
							android:fontFamily="@font/poppins_medium"
							android:text="Connected"/>
						
						<ImageView
							android:id="@+id/iv_unlink"
							android:layout_width="50dp"
							android:layout_height="wrap_content"
							android:layout_alignParentEnd="true"
							android:layout_alignParentBottom="true"
							android:elevation="5dp"
							android:src="@drawable/ic_unlink" />
					</RelativeLayout>
				</androidx.cardview.widget.CardView>
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/rl_readings"
				android:padding="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<TextView
					android:padding="10dp"
					android:id="@+id/tv_insights"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/poppins_medium"
					android:text="@string/insights"
					android:textColor="@color/black"
					android:textSize="22sp"
					android:textStyle="bold"/>
				<LinearLayout
					android:id="@+id/ll_rates_view_1"
					android:layout_below="@id/tv_insights"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<androidx.cardview.widget.CardView
						android:id="@+id/cv_heart_rate"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:elevation="5dp"
						app:cardBackgroundColor="#eeeeee"
						app:cardCornerRadius="16dp"
						app:cardUseCompatPadding="true">
						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							<LinearLayout
								android:padding="10dp"
								android:id="@+id/ll_heart_rate"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<ImageView
									android:id="@+id/iv_heart_rate"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:src="@drawable/ic_heart"/>
								<TextView
									android:layout_gravity="center"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:text="@string/str_heart_rate"
									android:textColor="@color/black"
									android:textSize="16sp"
									android:textStyle="bold"
									android:fontFamily="@font/poppins_medium"/>
							</LinearLayout>
							
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_below="@id/ll_heart_rate"
								android:layout_centerHorizontal="true"
								android:layout_marginTop="10dp"
								android:fontFamily="@font/poppins_medium"
								android:text="@string/heart_rate"
								android:textColor="@color/black"
								android:textSize="26sp"
								android:textStyle="bold" />
						</RelativeLayout>
					</androidx.cardview.widget.CardView>
					<androidx.cardview.widget.CardView
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:elevation="5dp"
						app:cardBackgroundColor="#eeeeee"
						app:cardCornerRadius="16dp"
						app:cardUseCompatPadding="true">
						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							
							<LinearLayout
								android:id="@+id/ll_blood_oxygen"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:padding="10dp">
								
								<ImageView
									android:id="@+id/iv_blood_oxygen"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:src="@drawable/ic_blood_oxygen" />
								
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_gravity="center"
									android:fontFamily="@font/poppins_medium"
									android:text="@string/str_blood_oxygen"
									android:textColor="@color/black"
									android:textSize="16sp"
									android:textStyle="bold" />
							</LinearLayout>
							<TextView
								android:layout_marginTop="10dp"
								android:layout_below="@id/ll_blood_oxygen"
								android:layout_centerHorizontal="true"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:fontFamily="@font/poppins_medium"
								android:textSize="26sp"
								android:textColor="@color/black"
								android:textStyle="bold"
								android:text="@string/blood_oxygen"/>
						</RelativeLayout>
					</androidx.cardview.widget.CardView>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/ll_rates_view_2"
					android:layout_below="@id/ll_rates_view_1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<androidx.cardview.widget.CardView
						android:id="@+id/cv_blood_pressure"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:elevation="5dp"
						app:cardBackgroundColor="#eeeeee"
						app:cardCornerRadius="16dp"
						app:cardUseCompatPadding="true">
						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							<LinearLayout
								android:padding="10dp"
								android:id="@+id/ll_blood_pressure"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<ImageView
									android:id="@+id/iv_blood_pressure"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:src="@drawable/ic_thermometer"/>
								<TextView
									android:layout_gravity="center"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:text="@string/str_blood_pressure"
									android:textColor="@color/black"
									android:textSize="16sp"
									android:textStyle="bold"
									android:fontFamily="@font/poppins_medium"/>
							</LinearLayout>
							
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_below="@id/ll_blood_pressure"
								android:layout_centerHorizontal="true"
								android:layout_marginTop="10dp"
								android:fontFamily="@font/poppins_medium"
								android:text="@string/blood_pressure"
								android:textColor="@color/black"
								android:textSize="26sp"
								android:textStyle="bold" />
						</RelativeLayout>
					</androidx.cardview.widget.CardView>
					<View
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="1dp"/>
				</LinearLayout>
			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>