<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/blue"
	tools:context=".Activities.MainActivity">
	<RelativeLayout
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:padding="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/rl_name">
		<ImageView
			android:visibility="invisible"
			android:id="@+id/iv_logo"
			android:layout_width="100dp"
			android:layout_height="100dp"/>
		<TextView
			android:layout_below="@id/iv_logo"
			android:id="@+id/tv_company_name"
			android:textColor="@color/white"
			android:textSize="26sp"
			android:textStyle="bold"
			android:fontFamily="@font/poppins_medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"/>
	</RelativeLayout>
	
	<ScrollView
		android:background="@drawable/bg_semi_rounded_corners"
		android:backgroundTint="@color/white"
		android:layout_below="@id/rl_name"
		android:layout_alignParentBottom="true"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:elevation="5dp"
			android:paddingStart="30dp"
			android:paddingTop="20dp"
			android:paddingEnd="30dp">
			
			<TextView
				android:id="@+id/tv_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:fontFamily="@font/poppins_medium"
				android:text="@string/login"
				android:textColor="@color/black"
				android:textSize="25sp"
				android:textStyle="bold" />
			
			<TextView
				android:id="@+id/tv_login_message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_login"
				android:layout_marginTop="10dp"
				android:fontFamily="@font/poppins_medium"
				android:text="@string/login_message"
				android:textSize="16sp" />
			<LinearLayout
				android:id="@+id/ll_phone_no"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_login_message"
				android:layout_marginTop="50dp">
				<com.hbb20.CountryCodePicker
					android:id="@+id/ccp_picker"
					app:ccpDialog_allowSearch="false"
					app:ccpDialog_cornerRadius="5dp"
					app:ccp_countryAutoDetectionPref="NETWORK_LOCALE_SIM"
					android:layout_gravity="center_vertical"
					android:layout_width="wrap_content"
					app:ccp_defaultNameCode="PK"
					app:ccp_defaultLanguage="ENGLISH"
					android:layout_height="wrap_content"
					app:ccp_showFlag="true"
					app:ccp_showPhoneCode="false" />
				<EditText
					android:id="@+id/et_phone_no"
					android:fontFamily="@font/poppins_medium"
					android:textSize="16sp"
					android:paddingBottom="10dp"
					android:paddingTop="10dp"
					android:paddingStart="15dp"
					android:paddingEnd="10dp"
					android:background="@drawable/bg_rounded_corners"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginStart="5dp"
					android:hint="Phone No." />
			</LinearLayout>

			<EditText
				android:id="@+id/et_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/ll_phone_no"
				android:layout_marginTop="25dp"
				android:background="@drawable/bg_rounded_corners"
				android:fontFamily="@font/poppins_medium"
				android:hint="Password"
				android:inputType="textPassword"
				android:paddingStart="15dp"
				android:paddingTop="10dp"
				android:paddingEnd="10dp"
				android:paddingBottom="10dp"
				android:textSize="16sp" />
			<Button
				android:id="@+id/btn_login"
				android:textColor="@color/white"
				android:backgroundTint="@color/blue"
				android:elevation="5dp"
				android:layout_margin="50dp"
				android:fontFamily="@font/poppins_medium"
				android:textAllCaps="false"
				android:background="@drawable/bg_rounded_corners"
				android:text="@string/login"
				android:layout_centerHorizontal="true"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="16sp"
				android:layout_below="@id/et_password"/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>